RESOLVED FIXED285550
REGRESSION (288222@main): Video flashes when turning on caption on apple.com/apple-events/
https://bugs.webkit.org/show_bug.cgi?id=285550
Summary REGRESSION (288222@main): Video flashes when turning on caption on apple.com/...
alan
Reported 2025-01-07 13:02:03 PST
Attachments
[fast-cq]Patch (4.60 KB, patch)
2025-01-07 13:04 PST, alan
no flags
alan
Comment 1 2025-01-07 13:04:20 PST
Created attachment 473828 [details] [fast-cq]Patch
EWS
Comment 2 2025-01-07 15:00:04 PST
Committed 288566@main (1b98a0587f3c): <https://commits.webkit.org/288566@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473828 [details].
Note You need to log in before you can comment on or make changes to this bug.