REGRESSION (288222@main): Video flashes when turning on caption on apple.com/apple-events/ https://bugs.webkit.org/show_bug.cgi?id=285550 <rdar://142447088>

Unreviewed revert.

* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::hasAutoHeightOrContainingBlockWithAutoHeight const):
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::canUseFlexItemForPercentageResolutionByStyle):
(WebCore::RenderFlexibleBox::usedFlexItemOverridingLogicalHeightForPercentageResolution):
* Source/WebCore/rendering/RenderFlexibleBox.h:

Canonical link: https://commits.webkit.org/288566@main